# _stocktrading

./: .env.example  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  DESIGN.md  Makefile  README.md  backtest.py  config.yaml  cost_model.py  daily_generator.py  data_source.py  features_intraday.py  labels.py  minute_data_source.py  misc.py  model_cache.py  model_lgbm.py  model_manager.py  panel_builder.py  panel_smoke.py  pyproject.toml  requirements.txt  run_phase0c.py  signals_writer.py  universe.py
.claude/: CLAUDE.md
artifacts/: scalpability_h30_m1.5.json
docs/: HANDOFF.md  architecture.md  family-designs.md  nightly-retrain-runbook.md  runtime-operations.md
live/: README_pair_open_fade.md  kabu_pair_open_fade.py
scripts/: analyze_scalpability_universe.py  board_recorder_universe.txt  build_board_universe.py  gen1_pipeline.py  gen1b_pipeline.py  gen2_minute_pipeline.py  gen3_minute_nn_pipeline.py  gen4_xsec_pipeline.py  gen5_tod_lag_pipeline.py  gen6_maker_pipeline.py  gen7_thrust_extract.py  gen8_net_selector_pipeline.py  nightly_retrain.ps1  nightly_retrain.py  start_runtime.ps1  train_calibration_model.py
signals/: manifest.json  signals_2025-01-14.json  signals_2025-01-15.json  signals_2025-01-16.json  signals_2025-01-17.json
tests/: conftest.py  test_backtest.py  test_bars_agent.py  test_bronze.py  test_config.py  test_cost_model.py  test_data_source.py  test_dataset_cache.py  test_execution.py  test_features.py  test_features_intraday.py  test_features_norm.py  test_gen2_minute.py  test_gen3_nn.py  test_gen4_xsec.py  test_gen5_tod_lag.py  (+32 more)
(+148 files in other folders)
