[project]
name = "scalp-agent"
version = "0.1.0"
description = "kabusapi board-push scalping ML-Agent (taker-first, hybrid offline/paper)"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "duckdb>=1.5",
    "numpy>=2.1",
    "lightgbm>=4.5",
    "orjson>=3.11",
    "pydantic>=2.13",
    "python-dotenv>=1.1",
    "websockets>=15.0",
    "pyarrow>=25.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
]
nn = [
    "torch>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scalp_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "recorded_data: needs S:/jp/stocks_board_kabu_push recordings (skipped when drive absent)",
]
